# peel

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-MIT  NOTICE  README.md  deny.toml  mise.toml
.github/: RELEASE_NOTES_TEMPLATE.md
.github/workflows/: ci.yml  docker.yml  docs.yml  fuzz.yml  release-on-merge.yml  release.yml
docs/: ENCRYPTION.md  ENGINEERING_BEST_PRACTICES.md  ENGINEERING_STANDARDS.md  OPTIMIZATIONS.md  PLAN.md  PLAN_7z_support.md  PLAN_archive_encryption.md  PLAN_checkpoint_blob_dedup.md  PLAN_decoder_freeze.md  PLAN_deflate_block_decoder.md  PLAN_gzip_throughput.md  PLAN_macos_puncher_race.md  PLAN_multi_url_source.md  PLAN_multivolume_archives.md  PLAN_rar.md  PLAN_rar3.md  PLAN_rar5_decoder.md  PLAN_rar5_multi_block_decode.md  PLAN_responsiveness.md  PLAN_v2.md  PLAN_xz_block_decoder.md  PLAN_xz_decoder_optimization.md  PLAN_xz_liblzma_port.md  PLAN_zstd_block_decoder.md  book.toml
docs/fixtures/: rar_legacy_large_lz_normal.md
docs/src/: SUMMARY.md  checkpoint-resume.md  cli-reference.md  download-modes.md  encryption.md  exit-codes.md  faq.md  formats.md  how-it-works.md  installation.md  integrity.md  introduction.md  local-extraction.md  multi-mirror.md  multi-part-urls.md  multi-volume.md  output-paths.md  performance.md  quick-start.md  troubleshooting.md
docs/src/examples/: arbitrum-snapshot.md  bare-download.md  ci-runner.md  kubernetes.md
examples/: decode_demo.rs  download_demo.rs  extract_demo.rs  gen_man.rs  http_demo.rs  rar_decode_probe.rs  rar_list.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: checkpoint_deserialize.rs  frame_boundary.rs  http_response_parsing.rs  rar_legacy_filter.rs  tar_sink.rs  zip_format.rs
fuzz/seeds/checkpoint_deserialize/: regression_format_version_zero  regression_oom_oversized_parts_count
fuzz/seeds/frame_boundary/: regression_oom_unbounded_block_decompressed_size  regression_zstd_max_fhd_tail
fuzz/seeds/http_response_parsing/: content_range_basic  content_range_unknown_total  url_https  url_relative_path  url_with_port_query
internal/: ENGINEERING_BEST_PRACTICES.md  ENGINEERING_STANDARDS.md  OPTIMIZATIONS.md  PLAN.md  PLAN_archive_encryption.md  PLAN_bz2_support.md  PLAN_checkpoint_blob_dedup.md  PLAN_decoder_freeze.md  PLAN_deflate_block_decoder.md  PLAN_download_modes.md  PLAN_gzip_throughput.md  PLAN_packaging.md  PLAN_rar.md  PLAN_rar3.md  PLAN_rar5_decoder.md  PLAN_rar5_multi_block_decode.md  PLAN_raw_row_throughput.md  PLAN_responsiveness.md  PLAN_single_stream_concurrent_extract.md  PLAN_v3_windows.md  PLAN_xz_block_decoder.md  PLAN_xz_decoder_optimization.md  PLAN_xz_liblzma_port.md
internal/fixtures/: rar_legacy_large_lz_normal.md
packaging/alpine/: APKBUILD  README.md
packaging/aur/: README.md
packaging/aur/peel/: PKGBUILD
packaging/aur/peel-bin/: PKGBUILD
packaging/debian/: README.md  changelog  control  copyright  rules
packaging/debian/source/: options
packaging/fedora/: README.md  peel.rpmlintrc  peel.spec
pyproto/: __init__.py  __main__.py  core.py  gzip_decoder.py  punch.py  sinks.py  test_e2e.py  zstd_decoder.py
scripts/: release.sh
src/: bitmap.rs  checkpoint.rs  cli.rs  coordinator.rs  crypto.rs  decode.rs  download.rs  encryption.rs  error.rs  extractor.rs  hash.rs  http.rs  io_backend.rs  lib.rs  main.rs  multivolume.rs  os_fd.rs  progress.rs  punch.rs  rar.rs  secret.rs  sevenz.rs  sink.rs  types.rs  zip.rs
src/coordinator/: local.rs
src/crypto/: aes.rs  aes_modes.rs  hmac.rs  pbkdf2.rs  sevenz_kdf.rs  sha1.rs  sha2_adapter.rs
src/decode/: bzip2_native.rs  deflate_native.rs  gzip.rs  identity.rs  lz4.rs  lz4_native.rs  ppmd2.rs  rar_legacy.rs  rar_native.rs  sevenz.rs  xz.rs  xz_liblzma.rs  xz_native.rs  zstd.rs  zstd_native.rs
src/decode/bzip2_native/: bitstream.rs  block.rs  body.rs  bwt.rs  error.rs  huffman.rs  mtf.rs  resume.rs  rle1.rs  rle2.rs  selectors.rs  stream.rs
src/decode/deflate_native/: bitstream.rs  block.rs  dynamic.rs  error.rs  gzip.rs  huffman.rs  members.rs  resume.rs  window.rs
src/decode/ppmd2/: alloc.rs  model.rs  range_dec.rs
src/decode/rar_legacy/: bits.rs  block_header.rs  bootstrap.rs  dict.rs  dist_cache.rs  entry.rs  huffman.rs  lzss.rs  ppmd_entry.rs  stream.rs  vm.rs
src/decode/rar_native/: bits.rs  (+11 more)
src/download/: chunk_fingerprints.rs  chunk_policy.rs  mirrors.rs  mmap_region.rs  multi_sparse.rs  multi_url.rs  rar_pipeline.rs  rate_limit.rs  scheduler.rs  sevenz_pipeline.rs  sparse_file.rs  worker.rs  zip_pipeline.rs
src/hash/: blake2sp.rs  crc32.rs  crc32_bzip2.rs  crc32c.rs  crc64.rs  sha256.rs  xxh64.rs
src/http/: client.rs  range.rs  request.rs  response.rs  url.rs
src/io_backend/: uring.rs
src/rar/: archive.rs  encrypt.rs  error.rs  format.rs  legacy.rs
src/secret/: source.rs
src/sevenz/: error.rs
src/sink/: rar.rs  raw.rs  sevenz.rs  tar.rs  zip.rs
src/zip/: aes_decrypt.rs  crc32.rs  decode.rs  encrypt_legacy.rs  format.rs
tests/: test_bench_decode_local.rs  test_bench_deflate_native.rs  test_bench_hash.rs  test_bench_lz4_native.rs  test_bench_rar_smoke.rs  test_bench_raw_sink.rs  test_bench_streaming.rs  test_bench_xz_liblzma.rs  test_bench_xz_native.rs  test_bitmap.rs  test_checkpoint.rs  test_cli_encryption.rs  test_cli_flags.rs  test_cli_multipart.rs  test_cli_multivolume.rs  test_cli_smoke.rs  test_coordinator.rs  test_coordinator_crash.rs  test_coordinator_local.rs  test_coordinator_rar.rs  test_coordinator_rar3.rs  test_coordinator_sevenz.rs  test_coordinator_zip.rs  test_crypto_diff.rs  test_decode.rs  test_download.rs  test_extractor.rs  test_format_detection.rs  test_http.rs  test_http_h2.rs  test_http_insecure.rs  test_lz4_native_diff.rs  test_multivolume_discovery.rs  test_punch.rs  test_punch_race_macos.rs  test_rar_decoder_resume.rs  test_rar_format.rs  test_rar_legacy_filters.rs  test_rar_legacy_ppmd.rs  test_rar_list_example.rs  (+8 more)
tests/support/: h2c_server.rs  mock_server.rs  mod.rs  peel_cli.rs  rar_bench_fixtures.rs  rar_fixtures.rs  sevenz_fixtures.rs  tar_fixtures.rs  tls_server.rs  work.rs  zip_fixtures.rs
(+76 files in other folders)
