[package]
name = "peel"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
publish = false
description = "Streaming, resumable, space-efficient extractor for compressed archives downloaded over HTTP."

[lib]
name = "peel"
path = "src/lib.rs"

[[bin]]
name = "peel"
path = "src/main.rs"

[dependencies]
thiserror = "2"
# TLS dependencies are pre-approved per docs/ENGINEERING_STANDARDS.md §2.4.
# `ring` is the crypto backend; `tls12` and `tls13` cover the protocol versions
# we need; `std` enables the blocking-IO `rustls::StreamOwned` adapter we use
# from `http::client`.
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
webpki-roots = "0.26"
# Compression backends, pre-approved per docs/ENGINEERING_STANDARDS.md §2.2.
# We use only the streaming reader API plus `encode_all` for tests; the
# default features (legacy decoders, dictionary builder, etc.) are not
# needed and would expand the audit surface for no gain.
zstd = { version = "0.13", default-features = false }
# xz / LZMA decompression backend (PLAN_v2.md §3 / docs/ENGINEERING_STANDARDS.md §2.2).
# Bindings to upstream liblzma; we use only the raw `stream::Stream` API
# (single-frame stepping, mirroring the zstd shape) so the default
# convenience features are kept off-radius.
xz2 = "0.1"
# lz4 frame-format decompression backend (PLAN_v2.md §4 / docs/ENGINEERING_STANDARDS.md §2.2).
# Pure Rust. We consume only the block-layer API (`block::decompress_into`)
# and parse the LZ4 Frame Format ourselves to keep the wire-level surface
# stable; the default `frame` feature pulls a `twox-hash` dep we don't
# need at runtime, so it stays disabled. `safe-decode` keeps malformed
# input from triggering panics inside the block decompressor.
lz4_flex = { version = "0.11", default-features = false, features = ["safe-decode", "std"] }
# DEFLATE backend for ZIP entries (PLAN_v2.md §5 / docs/ENGINEERING_STANDARDS.md §2.2).
# `rust_backend` selects the pure-Rust miniz_oxide backend per the
# allowlist note — no C dependency, smaller audit surface than the
# default zlib-ng backend, throughput well above what the network
# bottleneck makes us care about.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# CLI argument parsing for the `peel` binary boundary; pre-approved per
# docs/ENGINEERING_STANDARDS.md §2.2 with the `derive` feature.
clap = { version = "4", features = ["derive"] }
# Application-level error reporting at the binary boundary, pre-approved
# per docs/ENGINEERING_STANDARDS.md §2.2 / §3.2.
anyhow = "1"

[dev-dependencies]

[profile.release]
debug = "line-tables-only"
lto = "thin"
