[package]
name = "peel-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
description = "Streaming, resumable, space-efficient extractor for compressed archives downloaded over HTTP."
license = "MIT OR Apache-2.0"
repository = "https://github.com/agouin/peel"
homepage = "https://github.com/agouin/peel"
readme = "README.md"
keywords = ["download", "extract", "archive", "streaming", "tar"]
categories = ["command-line-utilities", "compression", "network-programming"]

[lib]
name = "peel"
path = "src/lib.rs"

[[bin]]
name = "peel"
path = "src/main.rs"

[dependencies]
thiserror = "2"
# TLS dependencies are pre-approved per docs/ENGINEERING_STANDARDS.md §2.4.
# `ring` is the crypto backend; `tls12` and `tls13` cover the protocol versions
# we need; `std` enables the blocking-IO `rustls::StreamOwned` adapter we use
# from `http::client`.
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
webpki-roots = "0.26"
# Compression backends, pre-approved per docs/ENGINEERING_STANDARDS.md §2.2.
# zstd-encoded ZIP entries (`src/zip/decode.rs`) decode through the
# upstream `zstd` crate's streaming reader API; the streaming
# `.tar.zst` / `.zst` decoder is hand-rolled in `src/decode/zstd/`
# and does not depend on this crate. The default features (legacy
# decoders, dictionary builder, etc.) are not needed and would expand
# the audit surface for no gain.
zstd = { version = "0.13", default-features = false }
# lz4 frame-format decompression backend (PLAN_v2.md §4 / docs/ENGINEERING_STANDARDS.md §2.2).
# Pure Rust. We consume only the block-layer API (`block::decompress_into`)
# and parse the LZ4 Frame Format ourselves to keep the wire-level surface
# stable; the default `frame` feature pulls a `twox-hash` dep we don't
# need at runtime, so it stays disabled. `safe-decode` keeps malformed
# input from triggering panics inside the block decompressor.
lz4_flex = { version = "0.11", default-features = false, features = ["safe-decode", "std"] }
# DEFLATE backend for ZIP entries (PLAN_v2.md §5 / docs/ENGINEERING_STANDARDS.md §2.2).
# `rust_backend` selects the pure-Rust miniz_oxide backend per the
# allowlist note — no C dependency, smaller audit surface than the
# default zlib-ng backend, throughput well above what the network
# bottleneck makes us care about.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# CLI argument parsing for the `peel` binary boundary; pre-approved per
# docs/ENGINEERING_STANDARDS.md §2.2 with the `derive` feature.
clap = { version = "4", features = ["derive"] }
# Application-level error reporting at the binary boundary, pre-approved
# per docs/ENGINEERING_STANDARDS.md §2.2 / §3.2.
anyhow = "1"
# Structured logging, pre-approved per docs/ENGINEERING_STANDARDS.md §2.2 /
# §10. The `progress::LogRenderer` (PLAN_v2.md §6) emits non-TTY progress
# as `tracing::info!` events; the binary boundary configures a subscriber
# that writes those events to stderr.
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
# HTTP client stack (PLAN_v2.md §3 / docs/ENGINEERING_STANDARDS.md §2.2 / §2.3).
# All confined to `http::client`; the boundary rule from §2.3 forbids
# imports of these crates outside that module. Feature sets are kept
# minimal: hyper itself only `client` + `http1` + `http2`; hyper-util
# `client-legacy` + the tokio executor; hyper-rustls just the protocol
# layers (we build the rustls config ourselves so it composes with the
# existing TLS dependency in §2.4). `tokio` runs as a current-thread
# runtime confined to the client (see §2.5); `rt-multi-thread` is
# deliberately not enabled.
hyper = { version = "1", default-features = false, features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", default-features = false, features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "ring", "tls12"] }
http = { version = "1", default-features = false, features = ["std"] }
http-body = { version = "1", default-features = false }
http-body-util = { version = "0.1", default-features = false }
bytes = { version = "1", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["rt", "net", "time", "macros", "sync"] }

# io_uring file-IO backend (PLAN_v2.md §7 / docs/ENGINEERING_STANDARDS.md §2.2).
# Linux-only target dep so non-Linux builds stay clean. We use the
# crate's sync API (`Submitter::submit_and_wait` on a dedicated IO
# thread); no async runtime is added. The runtime probe in
# `io_backend::uring` falls back to the blocking backend if the kernel
# rejects the ring construction, so the dep being present does not by
# itself force uring at runtime.
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", default-features = false }

[dev-dependencies]
# Dev-only reference implementation used by `hash::sha256` tests to
# cross-check the hand-rolled SHA-256 against a battle-tested upstream
# (`PLAN_v2.md` §10 / `docs/ENGINEERING_STANDARDS.md` §2.2). The
# runtime binary does not link `sha2`.
sha2 = "0.10"
# Dev-only: liblzma binding kept for the differential test suite in
# `tests/test_xz_native.rs` (encodes fixtures with `xz2`, decodes with
# both xz2 and the hand-rolled decoder, byte-compares). Phase 7 of
# `docs/PLAN_xz_block_decoder.md` swapped `xz2` out of the runtime
# decode path; it stays here so the differential corpus keeps a real
# liblzma reference implementation in the loop.
xz2 = "0.1"
# Dev-only: enable hyper's `server` feature for an in-process H2
# (h2c, plaintext prior-knowledge) test server in
# `tests/support/h2c_server.rs`. The `[dependencies]` block already
# pulls hyper for the runtime client; this adds the server APIs only
# for `cargo test` and does not affect release binaries. Cargo unions
# features between dev and runtime for test builds.
hyper = { version = "1", default-features = false, features = ["server"] }

[profile.release]
debug = "line-tables-only"
lto = "thin"
